// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store/actions updateBreakDuration 1`] = `
Object {
  "payload": 300,
  "type": "UPDATE_BREAK_DURATION",
}
`;

exports[`store/actions updateBreakFrequency 1`] = `
Object {
  "payload": 300,
  "type": "UPDATE_BREAK_FREQUENCY",
}
`;

exports[`store/actions updateBreakTimeLeft 1`] = `
Object {
  "payload": 300,
  "type": "UPDATE_BREAK_TIME_LEFT",
}
`;

exports[`store/actions updateDuration 1`] = `
Object {
  "payload": 300,
  "type": "UPDATE_DURATION",
}
`;

exports[`store/actions updateIsOnBreak 1`] = `
Object {
  "payload": true,
  "type": "UPDATE_IS_ON_BREAK",
}
`;

exports[`store/actions updateIsRunning 1`] = `
Object {
  "payload": true,
  "type": "UPDATE_IS_RUNNING",
}
`;

exports[`store/actions updateLanguage 1`] = `
Object {
  "payload": "en",
  "type": "UPDATE_LANGUAGE",
}
`;

exports[`store/actions updateReachedEnd 1`] = `
Object {
  "payload": true,
  "type": "UPDATE_REACHED_END",
}
`;

exports[`store/actions updateTimeLeft 1`] = `
Object {
  "payload": 300,
  "type": "UPDATE_TIME_LEFT",
}
`;

exports[`store/actions updateTimeSinceBreak 1`] = `
Object {
  "payload": 300,
  "type": "UPDATE_TIME_SINCE_BREAK",
}
`;
